Add resources, Add nav items and header items

--- a/index.html
+++ b/index.html
@@ -5,9 +5,162 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Dashboard</title>
     <link rel="stylesheet" href="./styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <script rel="text/javascript" src="./script/index.js" defer></script>
+    <link rel="icon" href="/src/pitch-icon.png">
 </head>
 <body>
-    <div></div>
+    <nav>
+        <div id="logo">
+            <div>
+                <img src="./src/pitch-icon.png" alt="pitch-icon">
+                <h3>pitch.</h3>
+            </div>
+        </div>
+        <div>
+            <ul>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/home-icon.svg" alt="home-icon">
+                    <p>Home</p>
+                </li>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/profile-ico.svg" alt="profile-icon">
+                    <p>Profile</p>
+                </li>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/msg-icon.svg" alt="messages-icon">
+                    <p>Messages</p>
+                </li>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/history-icon.svg" alt="history-icon">
+                    <p>History</p>
+                </li>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/task-icon.svg" alt="task-icon">
+                    <p>Tasks</p>
+                </li>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/community-icon.svg" alt="community-icon">
+                    <p>Communities</p>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <div></div>
+                    <img class="icon" src="/src/settings-icon.svg" alt="settings-icon">
+                    <p>Settings</p>
+                </li>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/support-icon.svg" alt="support-icon">
+                    <p>Support</p>
+                </li>
+                <li>
+                    <div></div>
+                    <img class="icon" src="./src/privacy-icon.svg" alt="privacy-icon">
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <header>
+        <h1>Dashboard</h1>
+        <div>
+            <div>
+                <img src="./src/search-icon.svg" alt="search-icon">
+                <input type="text" placeholder="Search something">   
+            </div>
+            <div class="header-icon"><img src="./src/add-icon.svg" alt="add-icon" class="icon"></div>
+            <div class="header-icon"><img src="./src/notification.svg" alt="notification-icon" class="icon"></div>
+            <div class="header-icon"><img src="./src/display-iamge.png" alt="display-image"></div>
+        </div>
+    </header>
+
+    <main>
+       
+        <section id="projects">
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <img src="" alt="">
+                <div><img src="" alt=""><img src="" alt=""></div>
+                <div></div>
+            </div>
+        </section>
+
+        <aside>
+            <div>
+                <p></p>
+                <div></div>
+            </div>
+            <div>
+                <p></p>
+                <div></div>
+            </div>
+            <div>
+                <img src="" alt="">
+                <h2></h2>
+                <img src="" alt="">
+            </div>
+        </aside>
+    </main>
 </body>
 </html>
