Add about me style

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div>
             <div>
                 <img src="./src/search-icon.svg" alt="search-icon">
-                <input type="text" placeholder="Search something">   
+                <input type="text" placeholder="Search for something">   
             </div>
             <div class="header-icon"><img src="./src/add-icon.svg" alt="add-icon" class="icon"></div>
             <div class="header-icon"><img src="./src/notification.svg" alt="notification-icon" class="icon"></div>
@@ -147,19 +147,46 @@
         </section>
 
         <aside>
-            <div>
-                <p></p>
-                <div></div>
+            <div id="about-me">
+                <p>About Me</p>
+                <div>
+                    <p>Hi! I’m djkier</p>
+                    <div class="line"></div>
+                    <p>a passionate  frontend developer with a strong foundation in HTML, CSS, and JavaScript, currently expanding my skills in React. I enjoy creating responsive and user-friendly web applications and am eager to learn more about backend development to become a full-stack developer.</p>
+                </div>
             </div>
             <div>
-                <p></p>
-                <div></div>
+                <p>Front-End Stacks</p>
+                <div>
+                    <div>
+                        <img src="./src/react.png" alt="react-icon">
+                        <div>
+                            <h6>React</h6>
+                            <p class="description">A popular JavaScript library developed by Facebook for building user interfaces, especially single-page applications. It allows developers to create reusable UI components that manage their own state, making it easier to build complex, dynamic web applications. React uses a virtual DOM to efficiently update and render components, leading to faster and more responsive user experiences.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./src/javascript-icon.png" alt="javascript-icon">
+                        <div>
+                            <h6>Javascript</h6>
+                            <p class="description">Versatile, high-level programming language primarily used for creating interactive and dynamic content on the web. It runs directly in the browser, allowing developers to add behavior to web pages, such as animations, form validations, and real-time updates. JavaScript is essential for front-end development, and with the rise of frameworks and environments like Node.js, it has also become a powerful tool for back-end development.</p>
+                        </div>
+                    </div>
+                    <div>
+                        <img src="./src/html5-icon.png" alt="html5-icon">
+                        <div>
+                            <h6>HTML</h6>
+                            <p class="description">Standard language used to structure and present content on the web. It defines the layout and organization of web pages by using elements like headings, paragraphs, links, images, and more. HTML serves as the backbone of web development, providing the framework that other technologies, such as CSS and JavaScript, build upon to create fully functional and visually appealing websites.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-                <img src="" alt="">
-                <h2></h2>
-                <img src="" alt="">
-            </div>
+            <!-- <div>
+                <img src="./src/dots.png" alt="dots-accessories">
+                <h2>Need a<br>Developer?<br><span class="hire-me">Hire me!</span></h2>
+                <img src="./src/right-arrow.png" alt="right-arrow-accessories">
+                <div class="circle"></div>
+            </div> -->
         </aside>
     </main>
 </body>
