Add front-end-stacks style

--- a/index.html
+++ b/index.html
@@ -155,11 +155,12 @@
                     <p>a passionate  frontend developer with a strong foundation in HTML, CSS, and JavaScript, currently expanding my skills in React. I enjoy creating responsive and user-friendly web applications and am eager to learn more about backend development to become a full-stack developer.</p>
                 </div>
             </div>
-            <div>
+
+            <div id="front-end-stacks">
                 <p>Front-End Stacks</p>
                 <div>
                     <div>
-                        <img src="./src/react.png" alt="react-icon">
+                        <img class="icon" src="./src/react.png" alt="react-icon">
                         <div>
                             <h6>React</h6>
                             <p class="description">A popular JavaScript library developed by Facebook for building user interfaces, especially single-page applications. It allows developers to create reusable UI components that manage their own state, making it easier to build complex, dynamic web applications. React uses a virtual DOM to efficiently update and render components, leading to faster and more responsive user experiences.</p>
