Add hire-me style

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 <p>Front-End Stacks</p>
                 <div>
                     <div>
-                        <img class="icon" src="./src/react.png" alt="react-icon">
+                        <img  src="./src/react.png" alt="react-icon">
                         <div>
                             <h6>React</h6>
                             <p class="description">A popular JavaScript library developed by Facebook for building user interfaces, especially single-page applications. It allows developers to create reusable UI components that manage their own state, making it easier to build complex, dynamic web applications. React uses a virtual DOM to efficiently update and render components, leading to faster and more responsive user experiences.</p>
@@ -182,12 +182,12 @@
                     </div>
                 </div>
             </div>
-            <!-- <div>
+            <div class="developer">
                 <img src="./src/dots.png" alt="dots-accessories">
                 <h2>Need a<br>Developer?<br><span class="hire-me">Hire me!</span></h2>
                 <img src="./src/right-arrow.png" alt="right-arrow-accessories">
-                <div class="circle"></div>
-            </div> -->
+              
+            </div>
         </aside>
     </main>
 </body>
