Add style on the Main section, WIP: responsive design

--- a/index.html
+++ b/index.html
@@ -89,60 +89,118 @@
 
     <main>
        
-        <section id="projects">
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
-            </div>
-            <div>
-                <p></p>
-                <img src="" alt="">
-                <div><img src="" alt=""><img src="" alt=""></div>
-                <div></div>
+        <section>
+            <h2>Projects</h2>
+            <div id="projects">
+                <div>
+                    <div>
+                        <p>Sign-up Form</p>
+                        <img class='screenshot' src="./src/screenshot/sign-up-page/image1.jpg" alt="sign-up-page">
+                        <div class="redirect-buttons">
+                            <a href="https://djkier.github.io/sign-up-page/" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="https://github.com/djkier/sign-up-page" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div>
+                    <div>
+                        <p>Calculator</p>
+                        <img class='screenshot' src="./src/screenshot/calculator/image2.jpg" alt="calculator-web-app">
+                        <div class="redirect-buttons">
+                            <a href="https://djkier.github.io/calculator/" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="https://github.com/djkier/calculator?tab=readme-ov-file" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <p>Etch A Sketch</p>
+                        <img class='screenshot' src="./src/screenshot/etch-a-sketch/image15.jpg" alt="etch-a-sketch-web-app">
+                        <div class="redirect-buttons">
+                            <a href="https://djkier.github.io/etch-a-sketch/" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="https://github.com/djkier/etch-a-sketch" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <p>Rock, Paper, Scissor Game</p>
+                        <img class='screenshot' src="./src/screenshot/rock-paper-scissor/image5.jpg" alt="rock-paper-scissor-web-app">
+                        <div class="redirect-buttons">
+                            <a href="https://djkier.github.io/js-basic-rock-paper-scissor/" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="https://github.com/djkier/js-basic-rock-paper-scissor" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div>
+                    <div>
+                        <p>Landing Page</p>
+                        <img class='screenshot' src="./src/screenshot/landing-page/image7.jpg" alt="landing-page">
+                        <div class="redirect-buttons">
+                            <a href="https://djkier.github.io/css-flex-practice/" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="https://github.com/djkier/css-flex-practice" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="disable">
+                    <div>
+                        <p>Template</p>
+                        <img class='screenshot' src="./src/screenshot/calculator/image13.jpg" alt="template">
+                        <div class="redirect-buttons">
+                            <a href="#logo" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="#logo" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="disable">
+                    <div>
+                        <p>Template</p>
+                        <img class='screenshot' src="./src/screenshot/calculator/image13.jpg" alt="template">
+                        <div class="redirect-buttons">
+                            <a href="#logo" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="#logo" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="disable">
+                    <div>
+                        <p>Template</p>
+                        <img class='screenshot' src="./src/screenshot/calculator/image13.jpg" alt="template">
+                        <div class="redirect-buttons">
+                            <a href="#logo" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="#logo" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="disable">
+                    <div>
+                        <p>Template</p>
+                        <img class='screenshot' src="./src/screenshot/calculator/image13.jpg" alt="template">
+                        <div class="redirect-buttons">
+                            <a href="#logo" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="#logo" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="disable">
+                    <div>
+                        <p>Template</p>
+                        <img class='screenshot' src="./src/screenshot/calculator/image13.jpg" alt="template">
+                        <div class="redirect-buttons">
+                            <a href="#logo" target="_blank"><img src="./src/web-view.svg" alt="globe-with-cursor"></a>
+                            <a href="#logo" target="_blank"><img src="./src/code-view.svg" alt="code-icon"></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
