Fix Settings icon bug

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <ul>
                 <li>
                     <div></div>
-                    <img class="icon" src="/src/settings-icon.svg" alt="settings-icon">
+                    <img class="icon" src="./src/settings-icon.svg" alt="settings-icon">
                     <p>Settings</p>
                 </li>
                 <li>
